

ViSP 2.7.1 (under development)
  - New features
  - Improvements
    . vpV4l2Grabber does no more require a call to open(I).
    . An exceptions is throwned when moving-edges are not initialized
      (vpMeTracker, vpMeLine, vpMeEllipse)
    . In model-based trackers, improve face visibility test using Ogre ray
      tracing when faces are concave or not oriented counter clockwise.
  - Examples
  - Bug fixed
    . [15404] Segfault in vpMbTracker derived classes around Coin SoDB::init()
      and SoDB::finish() usage
    . [15410] Robot wireframe simulator hangs
    . [15422] Build issues with ffmpeg 1.0.1 third party
    . [15475] Segfault in cv::Mat(BGR) to vpImage(grey) conversion
    . [15522] Visibility tests issues in Model-Based Tracker using Ogre3D
    . [15566] Bad mask orientation when using model-based tracker with 
      cylinders

----------------------------------------------
ViSP 2.7.0 (released February 11th, 2013)
  - New features
    - New vpViper650 and vpRobotViper650 classes to interface Inria's new
      Adept Viper s650 robot.
    - New robot simulators; vpSimulatorCamera, vpSimulatorPioneer,
      vpSimulatorPioneerPan
    - New model-based tracker using KLT points: vpMbKltTracker.
    - New hybrid model-based tracker using moving edges and KLT points:
      vpMbEdgeKltTracker
  - Improvements
    - Add visp-config.1 man page.
    - To respect Debian guidelines, remove duplicate ABI version.
      Library name was set to libvisp.a or libvisp.so.2.7.0 rather than
      libvisp-2.a or libvisp-2.so.2.7.0
    - Fix typos detected by lintian
    - Add support for multiarch. Multiarch is the ability for a library
      to be installed concurrently for differents architectures (such as
      i386 and amd64 for instance). In practice, the changes removes the
      assumption made that libraries are installed in $INSTALL_PREFIX/lib and
      binaries in $INSTALL_PREFIX/bin.
    - In vp1394TwoGrabber that allows to grab images from firewire cameras,