@@ -2,7 +2,7 @@
 
 #############################################################################
 #
-# $Id$
+# $Id: visp-config.in 4057 2013-01-05 13:10:29Z fspindle $
 #
 # This file is part of the ViSP software.
 # Copyright (C) 2005 - 2013 by INRIA. All rights reserved.
@@ -34,7 +34,8 @@
 #
 # Description:
 # visp-config shell script.
-# Auto-generated from visp-config.in by cmake.
+# Auto-generated from visp-config.install.in by cmake. For backward 
+# compatibility used visp.pc.
 #
 # Authors:
 # Fabien Spindler
@@ -47,11 +48,14 @@ relpath=`(cd $relpath/..; pwd)`
 
 PREFIX=$relpath
 
-CFLAGS="${VISP_CONFIG_CFLAGS_SCRIPT}"
+CFLAGS_CMD=`pkg-config --cflags visp`
+CFLAGS=$CFLAGS_CMD
 
-LIBS="${VISP_CONFIG_LIBS_SCRIPT}"
+LIBS_CMD=`pkg-config --libs visp`
+LIBS=$LIBS_CMD
 
-VERSION="${VISP_VERSION}"
+VERSION_CMD=`pkg-config --modversion visp`
+VERSION=$VERSION_CMD
 
 NO_NEWLINE_CHARACTER="${VISP_ECHO_NO_NEWLINE_CHARACTER}"
 NO_NEWLINE_OPTION="${VISP_ECHO_NO_NEWLINE_OPTION}"
