@@ -1,0 +1,14 @@
+# Package Information for pkg-config
+
+prefix=${CMAKE_INSTALL_PREFIX}
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: ViSP
+Description: Visual Servoing Platform
+URL: http://www.irisa.fr/lagadic/visp
+Version: ${VISP_VERSION}
+Libs: ${VISP_CONFIG_LIBS_PC}
+
+Cflags: ${VISP_CONFIG_CFLAGS_PC}
